# Youtubeseoai

./: .gitignore  .pre-commit-config.yaml  ab_testing.py  dev.sh  prometheus.yml  pyproject.toml  quality.sh  settings.json  setup.sh  test.md  youtubecred.json
.github/workflows/: ci-cd.yml
Chat-WebUI-main/: LICENSE  app.py  chatwebuireadme.md  package-lock.json  package.json  requirements.txt
Chat-WebUI-main/src/components/: SEOAnalyticsDashboard.js
Chat-WebUI-main/static/css/: styles.css
Chat-WebUI-main/static/js/: dexie.min.js  highlight.min.js  mammoth.browser.min.js  marked.min.js  scripts.js  seo.js
Chat-WebUI-main/templates/: index.html  seo_analytics.html
api-gateway/: pyproject.toml  requirements-dev.txt  requirements.txt
api-gateway/src/: __init__.py  app.py
api-gateway/tests/: __init__.py  test_api_gateway.py
chat-service/: requirements.txt
chat-service/src/: app.py
chat-service/tests/: test_chat_service.py
docs/: readme.md  scripts.md
k8s/: api-gateway-deployment.yaml  api-gateway-service.yaml  chat-service-deployment.yaml  chat-service-service.yaml  knowledge-service-deployment.yaml  knowledge-service-service.yaml  namespace.yaml  seo-service-deployment.yaml  seo-service-service.yaml  video-service-deployment.yaml  video-service-service.yaml
knowledge-service/: Dockerfile  requirements-dev.txt  requirements.txt
knowledge-service/src/: app.py
knowledge-service/tests/: test_knowledge_service.py
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  project-brief.md  systemPatterns.md  techContext.md
seo-service/: Dockerfile
seo-service/src/: app.py
seo-service/tests/: test_seo_service.py
video-service/: Dockerfile
video-service/config/: pytest.ini
video-service/src/: app.py
video-service/tests/: test_video_service.py
